--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,11 @@
+spring:
+  datasource:
+    driver-class-name: org.mariadb.jdbc.Driver
+    url: jdbc:mariadb://localhost:3306/db_demo?allowPublicKeyRetrieval=true&useSSL=false
+    username: root
+    password:
 
+  jpa:
+    hibernate:
+      ddl-auto: none
+    show-sql: true
